--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Changes in Version 0.2.0-3
+	o Improved detection of endogenous variables
+
 Changes in Version 0.2.0-2
 	o Added '~>' operator for regression parameters to distinguish between regressions and factor loadings ('->')
 
