--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Changes in Version 0.2.0-6
+	o Threshold model is now extracted from mplus
+
 Changes in Version 0.2.0-4
 	o Added moderate support for intercepts. They are now plotted as small lines on the far side of nodes
 
