--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Changes in Version 0.2.0-7
+	o reorder now moves intercepts with reordered manifest, and works more consistant.
+
 Changes in Version 0.2.0-6
 	o Threshold model is now extracted from mplus
 
