Many bugfixes in mplus model, including better error reports for functionality that is not yet included. All mplus user manual examples should now run and at least give a clear warning about why they fail.
Additionaly several bugfixes in color mixing.

Added support for 'principal' and 'princomp' objects.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in Version 0.2.0-4
+	o Added support for 'principal' and 'princomp' objects
+	o Nodes with missing colors are now properly mixed from connected nodes.
+	o Single manifest variables are now placed at the center
+
 Changes in Version 0.2.0-3
 	o Added '--' specifier for unknown edge (undirected)
 
