--- a/NEWS
+++ b/NEWS
@@ -5,7 +5,8 @@ Changes in Version 0.3.2
   o Added edgeLabels and nodeLabels arguments to manually overwrite edge and node labels, in the order they appear in the RAM and Vars elements of the 'semPlotModel' that is created internally. In addition to the qgraph change that these can now be assigned lists including expressions it should now be easier to add greek letters.
   o Added 'reduce' argumen to lisrelModel that controls if variables that are named the same should be treated as the same variable.
   o 'semPlotModel' for lisrel modes can now use dots to send arguments to 'lisrelModel'
-  o 'qgraph' is no longer on the depends list but imported instead. This makes sure that the Tcl/Tk interface (which is only suggested in qgraph) is not loaded on loading semPlot and as a result makes sure that semPlot does not result in crashes on Mac computers where Tcl/Tk is not installed.
+  o 'qgraph' is no longer on the depends list but imported instead. 
+  o  MplusAutomation is no longer imported but moved to suggests list. This makes sure that the Tcl/Tk interface is not loaded on loading semPlot and as a result makes sure that semPlot does not result in crashes on Mac computers where Tcl/Tk is not installed.
   o Fixed a bug where numeric labels where abbreviated, causing erradic behavior on the labels.
   o Added nDigits argument to control the number of digits used in rounding for labels.
   o Added 'exoVar' and 'exoCov' arguments that can be used to not display variances or covariances of truely exogenous variables (no incomming directed edges)
