--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in Version 0.3.3
+    o Lavaan model syntax is now supported as input
+    o Numeric edge labels without using whatLabels argument are now correctly abbreviated
+    o Several small fixes
+
 Changes in Version 0.3.2
   o New features
     o Matrix model functionality:
