--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Changes in Version 1.0.1
+  o Fixed a dependency related bug causing examples to crash.
+
 Changes in Version 1.0.0
 
 New features:
