--- a/README
+++ b/README
@@ -1,10 +1,3 @@
 Path diagrams and visual analysis of various SEM packages' output.
 
-For more information, see: http://sachaepskamp.com/semPlot
-
-
-
-Developmental 'shiny' applications:
-
-# Lavaan model writer:
-shiny:::runGist("https://gist.github.com/SachaEpskamp/5607556")
+Please ask questions here or on http://sachaepskamp.com/forums/semPlot.
