--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 Changes in Version 1.1.4
   o Fixed issues with new lavaan version
+  o Small fix for CRAN
 
 Changes in Version 1.1.3
   o the 'ramModel' function now supports meanstructure with the 'M' argument.
